--- a/slides.css
+++ b/slides.css
@@ -4,3 +4,4 @@
 .reveal pre { background-color: #111111; }
 .reveal h1 { font-size: 250%; }
 .reveal pre > code { font-size: 140%; line-height: 160%; }
+.reveal table { margin-right: auto; margin-left: auto; }
