--- a/slides.css
+++ b/slides.css
@@ -3,6 +3,6 @@
 code span.dt { text-decoration: none; font-style: italic; }
 .reveal pre > code,
 .reveal pre { background-color: #111111; }
-.reveal h1 { font-size: 250%; }
+.reveal h1 { font-size: 250%; line-height: 1.1em; }
 .reveal pre > code { font-size: 140%; line-height: 160%; }
 .reveal table { margin-right: auto; margin-left: auto; }
