--- a/slides.css
+++ b/slides.css
@@ -1,6 +1,7 @@
 @import url("./reveal.js/css/theme/night.css");
 
 code span.dt { text-decoration: none; font-style: italic; }
+.reveal p { margin-bottom: 1em; }
 .reveal pre > code,
 .reveal pre { background-color: #111111; }
 .reveal h1 { font-size: 250%; line-height: 1.1em; }
